[package]
name = "calypso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
git2 = "0.18.1"
glob = "0.3.1"
image = "0.20.1"
lcs-image-diff = "0.1.7"
