[package]
name = "calypso"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tower-http = { version = "0.5.0", features = ["fs", "trace"] }
clap = { version = "4.4.6", features = ["derive"] }
git2 = "0.18.1"
glob = "0.3.1"
image = "0.24.1"
image-diff = "0.1.13"
lcs-image-diff = "0.1.7"
axum = "0.7.3"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
askama = "0.12.1"
